Hacky fix for appearing scrollbars on different Windows size scales

--- a/zefir/src/assets/main.css
+++ b/zefir/src/assets/main.css
@@ -22,3 +22,9 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
+
+@media (-webkit-device-pixel-ratio: 1.25) {
+  * {
+    zoom: 0.9999;
+  }
+}
